--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenTalk</title>
-    <link rel="preload" href="Mona-Sans.woff2" as="font" type="font/woff2" crossorigin>
+   
     <link rel="icon" href="./images/Desktop - 3.png">
     <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="preload" href="./font/Mona-Sans.ttf" as="font" type="font/woff2" crossorigin>
     
     
 </head>
