--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>OpenTalk</title>
    
     <link rel="icon" href="./images/Desktop - 3.png">
-    <link rel="preload" href="./font/Mona-Sans.ttf" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="./font/Mona-Sans.ttf" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="./stylesheets/style.css">
    
     
