--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenTalk</title>
    
-    <link rel="icon" href="./images/Desktop - 3.png">
+    <link rel="icon" href="./images/OpenTalkLogo.png">
     <link rel="preload" href="./font/Mona-Sans.ttf" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="./stylesheets/style.css">
    
@@ -15,7 +15,7 @@
 <body>
     <div class="risediv">
         <div class="mainlogodiv">
-            <img src="./images/Desktop - 3.png" alt="logo"><span>p</span><span>e</span><span>n</span><span>T</span><span>a</span><span>l</span><span>k</span>
+            <img src="./images/OpenTalkLogo.png" alt="logo"><span>p</span><span>e</span><span>n</span><span>T</span><span>a</span><span>l</span><span>k</span>
 
 
         </div>
@@ -23,7 +23,7 @@
     <div class="registerpage">
         <div class="register">
             <div class="logodiv">
-                <img src="./images/Desktop - 3.png" alt="logo"><span>p</span><span>e</span><span>n</span><span>T</span><span>a</span><span>l</span><span>k</span>
+                <img src="./images/OpenTalkLogo.png" alt="logo"><span>p</span><span>e</span><span>n</span><span>T</span><span>a</span><span>l</span><span>k</span>
             </div>
             
                 <form class="registerform" action="/register" method="post">
