--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    
     <link rel="icon" href="./images/OpenTalkLogo.png">
     <link rel="preload" href="./font/Mona-Sans.ttf" as="font" type="font/woff2" crossorigin="anonymous">
-    <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="stylesheet" href="./stylesheets/register.css">
    
     
     
@@ -41,6 +41,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
     integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./javascripts/index.js"></script>
+    <script src="./javascripts/register.js"></script>
 </body>
 </html>
