--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="preload" href="./font/Mona-Sans.ttf" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="./stylesheets/register.css">
    
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
     
 </head>
