--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <form class="registerform" action="/register" method="post">
                     <p class="seemore">Make Account to see More!</p>
                     <input type="email" name="email" placeholder="Email" required/>
-                    <input type="text" name="username" placeholder="Username" required />
                     <input type="text" name="fullname" placeholder="Full Name" required />
                     <input type="password" name="password" placeholder="Password" required />
+                    <a class="nothaveaccount" href="">Already have an account?</a>
                     <button>Register</button>
                 </form>
             
